got signup confirmation to work 2

--- a/app/views/orders/_order_details.html.haml
+++ b/app/views/orders/_order_details.html.haml
@@ -14,10 +14,10 @@
         %tr
           %th Premium
           %th Your flights:
-          %th 1 to 2 hrs
-          %th 2 to 3 hrs
-          %th 3 to 4 hrs
-          %th 4+ hrs
+          %th 1 to 2 hrs<br>Delay
+          %th 2 to 3 hrs<br>Delay
+          %th 3 to 4 hrs<br>Delay
+          %th 4+ hrs<br>Delay
           %th Cancel/<br>Divert
       %tbody
         -@coverage.flight_coverages.each do |fc|
