--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -89,11 +89,16 @@ body {
 }
 
 .table {
+  background-color: whiteSmoke;
   th, td {
     vertical-align: middle;
     text-align: center;   
     font-size:medium;
     font-weight:bold;   
+  }
+  tbody tr:hover td,
+  tbody tr:hover th {
+    background-color: whiteSmoke;
   }
 }
 
