Got paypal to work without confirmation

--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -12,6 +12,7 @@
   %p
   %p
   %p
+  = link_to image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), paypal_checkout_path
   = f.hidden_field :stripe_card_token
   .row
     .span6.well
