--- a/app/views/user_mailer/order_confirmation.html.haml
+++ b/app/views/user_mailer/order_confirmation.html.haml
@@ -1,3 +1,6 @@
 - logger.info "Sending confirmation email to #{@user.inspect}"
 = @user.first_name
-Thank you for your order.
+Thank you for your order  
+-if @user.paypal_transactionid
+  Paypal transaction id:
+  =@user.paypal_transactionid
