--- a/app/views/user_mailer/order_confirmation.html.haml
+++ b/app/views/user_mailer/order_confirmation.html.haml
@@ -1,5 +1,6 @@
-- logger.info "Sending confirmation email to #{@user.inspect}"
-= @user.first_name
+- user = @order.user
+- logger.info "Sending confirmation email to #{user.inspect}"
+= user.first_name
 Thank you for your order  
 -if @order.paypal_transactionid
   Paypal transaction id:
