--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -15,11 +15,12 @@
     = f.label :password_confirmation
     %br/
     = f.password_field :password_confirmation
-  %div
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password
+  - if f.object.encrypted_password.present?
+    %div
+      = f.label :current_password
+      %i (we need your current password to confirm your changes)
+      %br/
+      = f.password_field :current_password
   %div= f.submit "Update"
 %h3 Cancel my account
 %p
